<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/abc_button_padding_vertical_material"
        android:text="@string/label_nano_degree"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_spotify_Streamer" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_source_app" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_library_app" />

    <Button
        android:id="@+id/btn_source_app"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_buid_it_bigger" />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_xyz_reader" />

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/btn_capstone_my_app"
        style="@style/CustomeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/pink"
        android:text="@string/btn_capstone_my_app" />


</LinearLayout>
